versioned_docs/version-4.0.x/reference/functions/Set-ADTServiceStartMode.mdx
---
id: Set-ADTServiceStartMode
title: Set-ADTServiceStartMode
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Set the service startup mode.

## SYNTAX

```powershell
Set-ADTServiceStartMode [-Service] <ServiceController> [-StartMode] <String> [<CommonParameters>]
```

## DESCRIPTION

Set the service startup mode.
This function allows you to configure the startup mode of a specified service.
The startup modes available are: Automatic, Automatic (Delayed Start), Manual, Disabled, Boot, and System.

## EXAMPLES

### EXAMPLE 1

```powershell
Set-ADTServiceStartMode -Service 'wuauserv' -StartMode 'Automatic (Delayed Start)'
```

Sets the 'wuauserv' service to start automatically with a delayed start.

## PARAMETERS

### -Service

Specify the name of the service.

```yaml
Type: ServiceController
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -StartMode

Specify startup mode for the service.
Options: Automatic, Automatic (Delayed Start), Manual, Disabled, Boot, System.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: True
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not return any output.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Set-ADTServiceStartMode](./Set-ADTServiceStartMode.mdx)
